# simple_chat_assignment

./: .gitignore  CMakeLists.txt  README.md  requirments.txt
src/: CMakeLists.txt  MainUI.fbp  TransferDialog.fbp  __main__.py  chatapp.cpp  chatapp.xml  main.py
src/server/: client.py  server.py
src/ui/: chat_ui.py  root.cpp
src/xrc/: chatui.xrc  main.xrc
